# camera-linux

./: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/camera_linux/: MainActivity.kt
example/: pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: camera_linux.dart  camera_linux_bindings_generated.dart  main.dart
lib/ffi/: camera_generated_bindings.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: camera_linux.h  camera_linux_native.c
src/: CMakeLists.txt  camera_linux.c  camera_linux.h  opencv_wrapper.cpp
src/test/: CMakeCache.txt  CMakeLists.txt  DisplayImage.cpp  Makefile  cmake_install.cmake
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
